add aria label for SEO

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,11 +33,12 @@ const { showNavigation = true } = Astro.props;
                 <a href="/blog" class="nav-link">All Posts</a>
                 <a href="https://skill-wanderer.com/" class="nav-link">Main Site</a>
             </nav>
-        )}
-
-        <div class="md:hidden">
+        )}        <div class="md:hidden">
             <!-- Mobile menu button -->
-            <button class="text-skill-wanderer-text-dark-secondary hover:text-skill-wanderer-primary-orange focus:outline-none">
+            <button 
+                class="text-skill-wanderer-text-dark-secondary hover:text-skill-wanderer-primary-orange focus:outline-none"
+                aria-label="Open mobile navigation menu"
+            >
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
                 </svg>
