--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -166,7 +166,7 @@ const enhancedHomeKeywords = `tech blog, software development, programming, web 
             {sortedPosts.length > 0 ? (<div class="flex flex-col lg:flex-row gap-8">
                     <!-- Main Latest Post (lg:w-2/3) -->
                     {latestPost && (
-                        <div class="lg:w-2/3">                            <a href={`/blog/${latestPost.slug}/`} class="block card-dark rounded-lg overflow-hidden group hover:shadow-xl transition-shadow duration-300 h-full flex flex-col">
+                        <div class="lg:w-2/3">                            <a href={`/blog/${latestPost.slug}/`} class="block bg-skill-wanderer-card-dark rounded-lg overflow-hidden group hover:shadow-xl transition-shadow duration-300 h-full flex flex-col">
                                 {latestPost.data.image && (
                                     <Image 
                                         src={latestPost.data.image} 
