--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -113,13 +113,13 @@ const breadcrumbJsonLd = {
       "@type": "ListItem",
       "position": 1,
       "name": "Home",
-      "item": Astro.site || "https://wanderings.skill-wander.com"
+      "item": Astro.site || "https://wanderings.skill-wanderer.com"
     },
     {
       "@type": "ListItem",
       "position": 2,
       "name": "Blog",
-      "item": `${Astro.site || "https://wanderings.skill-wander.com"}/blog/`
+      "item": `${Astro.site || "https://wanderings.skill-wanderer.com"}/blog/`
     },
     {
       "@type": "ListItem",
