--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -166,13 +166,16 @@ const enhancedHomeKeywords = `tech blog, software development, programming, web 
             {sortedPosts.length > 0 ? (<div class="flex flex-col lg:flex-row gap-8">
                     <!-- Main Latest Post (lg:w-2/3) -->
                     {latestPost && (
-                        <div class="lg:w-2/3">                            <a href={`/blog/${latestPost.slug}/`} class="block bg-skill-wanderer-card-dark rounded-lg overflow-hidden group hover:shadow-xl transition-shadow duration-300 h-full flex flex-col">                                {latestPost.data.image && (
+                        <div class="lg:w-2/3">                            
+                        <a href={`/blog/${latestPost.slug}/`} class="block bg-skill-wanderer-card-dark rounded-lg overflow-hidden group hover:shadow-xl transition-shadow duration-300 h-full flex flex-col">                                {latestPost.data.image && (
                                     <Image 
                                         src={latestPost.data.image} 
                                         alt={latestPost.data.title} 
                                         class="w-full h-80 md:h-96 lg:h-[28rem] object-cover group-hover:scale-105 transition-transform duration-300"
                                         width={800}
                                         height={448}
+                                        quality={80}
+                                        format="webp"
                                     />
                                 )}
                                 <div class="p-6 md:p-8 flex-grow flex flex-col justify-center">
