--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -39,7 +39,7 @@ const { showNavigation = true } = Astro.props;
                 class="text-skill-wanderer-text-dark-secondary hover:text-skill-wanderer-primary-orange focus:outline-none"
                 aria-label="Open mobile navigation menu"
             >
-                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="https://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
                 </svg>
             </button>
